<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_margin="1dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choosepic"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="351dp"
            android:layout_height="201dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/picture_of_selected_bird"
            android:src="@drawable/fossekallmain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <Button
            android:id="@+id/button"
            android:layout_width="137dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:padding="@dimen/cardview_default_radius"
            android:text="Save picture"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="142dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:padding="@dimen/cardview_default_radius"
            android:text="Change - TODO"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUser"
            android:layout_width="184dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toTopOf="@+id/etDescription"
            app:layout_constraintEnd_toStartOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/button">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="185dp"
                android:layout_height="54dp"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/editTextDate"
            android:layout_width="119dp"
            android:layout_height="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/datehint"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/etDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDescription"
            android:layout_width="308dp"
            android:layout_height="188dp"
            android:layout_marginBottom="132dp"
            android:inputType="textLongMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="314dp"
                android:layout_height="194dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/description" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveListing"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/save"
            android:textColor="#6D4C41"
            android:contentDescription="@string/to_save_the_listing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelListing"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="Cancel"
            android:contentDescription="@string/to_cancel"
            android:textColor="#6D4C41"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>